--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "observer-battery-demo",
   "version": "1.0.0",
@@ -14,7 +13,10 @@
     "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "typescript": "^5.8.3"
   }
 }
